--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,16 +24,16 @@ steps:
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
     tasks: 'build'
-    #- task: Gradle@2
-    #  inputs:
-    #    workingDirectory: ''
-    #    gradleWrapperFile: 'gradlew'
-    #    gradleOptions: '-Xmx3072m'
-    #    javaHomeOption: 'JDKVersion'
-    #    jdkVersionOption: '1.8'
-    #    jdkArchitectureOption: 'x64'
-    #    publishJUnitResults: false
-    #    testResultsFiles: '**/TEST-*.xml'
-    #    tasks: 'test'
-- publish: $(System.DefaultWorkingDirectory)/app/build/outputs/apk/release/app-release-unsigned.apk
-  artifact: SpeakHumanish
+#- task: Gradle@2
+#  inputs:
+#    workingDirectory: ''
+#    gradleWrapperFile: 'gradlew'
+#    gradleOptions: '-Xmx3072m'
+#    javaHomeOption: 'JDKVersion'
+#    jdkVersionOption: '1.8'
+#    jdkArchitectureOption: 'x64'
+#    publishJUnitResults: false
+#    testResultsFiles: '**/TEST-*.xml'
+#    tasks: 'test'
+#- publish: $(System.DefaultWorkingDirectory)/app/build/outputs/apk/release/app-release-unsigned.apk
+#  artifact: SpeakHumanish
