add publish after build

--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,16 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
+publishing {
+    repositories {
+        maven {
+            url 'https://valerasig.pkgs.visualstudio.com/_packaging/valerasig/maven/v1'
+            credentials {
+                username "AZURE_ARTIFACTS"
+                password System.getenv("AZURE_ARTIFACTS_ENV_ACCESS_TOKEN") ?: "${azureArtifactsGradleAccessToken}"
+            }
+        }
+    }
+}
