--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
 
         <activity android:name=".activities.ParentScreenActivity"
-                  android:screenOrientation="landscape">
+                  android:screenOrientation="portrait">
 
         </activity>
 
