--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,12 @@
         </activity>
 
         <activity android:name=".activities.ParentScreenActivity"
-                  android:screenOrientation="portrait">
+            android:screenOrientation="landscape">
 
+        </activity>
+
+        <activity android:name=".activities.EditCardActivity"
+            android:screenOrientation="landscape">
         </activity>
 
         <activity android:name=".activities.SecurityQuestion"
