--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.valera.speakhumanish">
 
+<!--    <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -31,6 +34,6 @@
         <activity android:name=".activities.SecurityQuestion"
                   android:theme="@style/AppTheme.PopupTheme">
         </activity>
-    </application>
 
+    </application>
 </manifest>
